# hako-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: cli.c  hako.wasm
